# KAN-MyST-Interactive

./: .dockerignore  .gitignore  README.md  myst.yml  paper.bib  paper.md  pyproject.toml  start.sh
app/: Dockerfile  README.md  app.py  figures.py  kan_core.py
app/pages/: coarse.py  home.py  prune.py  refine.py  sparsify.py  symbolic.py
content/: kan_demo.ipynb
docs/: direction-2026-04-30.md
scripts/: convert_paper.py
