[project]
name = "kan-myst-interactive"
version = "0.1.0"
description = "Interactive KAN paper rendered with MyST and executed against a local Jupyter kernel."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "pykan",
  "matplotlib==3.6.2",
  "numpy==1.24.4",
  "pandas==2.0.1",
  "scikit-learn==1.1.3",
  "seaborn",
  "setuptools==65.5.0",
  "sympy==1.11.1",
  "torch==2.2.2",
  "tqdm==4.66.2",
  "pyyaml",
  "ipykernel",
  "jupyter",
  "jupyter_server",
]

[tool.uv]
package = false
